# groundcrew

./: .gitignore  LICENSE  README.md  config.yaml  env.yaml  pyproject.toml  requirements.txt  test.sh
data/: evaluation.yaml
scripts/: bench.py  dbverify.py  emb.py  evalreview.py  evaluation.py  run.py  runshell.py  test_chroma.py
src/groundcrew/: .shellrc  agent.py  agent_utils.py  code.py  code_utils.py  constants.py  dataclasses.py  emb.py  evaluation.py  system_prompts.py  tools.py  utils.py
src/groundcrew/llm/: openaiapi.py
tests/: test_agent_utils.py  test_code_utils.py  test_emb.py  test_evaluation.py  test_tools.py
tests/llm/: test_openaiapi.py
