[build-system]
requires = [
    "setuptools>=65.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "groundcrew"
version = "0.1.0"
authors = [
  {name="Prolego, Inc.", email="russ@prolego.com"},
]
description = "An experimental LLM-based codebase assistant."
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    # "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "openai>=1.6.1",
    "torch>=2.1.0",
]

[project.urls]
"Homepage" = "https://github.com/prolego-team/groundcrew"
